tests/ui/type-alias-impl-trait/constrain_in_projection2.next.stderr
error[E0282]: type annotations needed
  --> $DIR/constrain_in_projection2.rs:28:13
   |
LL |     let x = <Foo as Trait<Bar>>::Assoc::default();
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
